Fixed text align for CTA and padding for CTA

--- a/style.css
+++ b/style.css
@@ -362,6 +362,15 @@ nav a {
     width: auto;
   }
 
+  .cta h2{
+    text-align: center;
+  }
+
+  .cta{
+    padding: 1rem;
+    gap: 1rem;
+  }
+
   .about-text {
     width: 75%;
     justify-content: center;
